# multimodal-prototype

./: .gitignore  main.py  pyproject.toml
artifacts/: tokenizer.json
artifacts/models/toy_gpt/: config.json  model.safetensors
artifacts/training/checkpoint-27/: generation_config.json  scheduler.pt  tokenizer.json  tokenizer_config.json  trainer_state.json
outputs/2025-08-31/22-04-12/artifacts/models/: model_attributes.json
src/configs/: gpt2.yml
src/data/: prepare_data.py  text_dataset.py
src/gpts/: gpt2.py  tiny_gpt.py
src/tokenizers/: byte_pair_encoding.py
src/utils/: parameters.py
tests/: test_bpe.py  test_prepare_dataset.py  test_tiny_gpt.py
